Update and rename Introduction to Data Science - PyConf Hyderabad 2019 test.ipynb to Introduction to Data Science test.ipynb

--- a/Introduction to Data Science test.ipynb
+++ b/Introduction to Data Science test.ipynb
@@ -7,7 +7,7 @@
     "# Introduction to Data Science\n",
     "7th December, 2019\n",
     "\n",
-    "Created by Grishma Jena for PyConf Hyderabad 2019 tutorial\n"
+    "Created by Grishma Jena\n"
    ]
   },
   {
